scenarios/mesh-traffic-management/manifests/virtual-service.yaml
# VirtualService: 90% traffic to stable go-api, 10% to canary.
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-api-canary
  namespace: go-api
spec:
  hosts:
    - go-api
  http:
    - route:
        - destination:
            host: go-api
            subset: stable
          weight: 90
        - destination:
            host: go-api
            subset: canary
          weight: 10
